<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PostActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/post_animation_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/post"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/post_text_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_animation_view">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/carrois_gothic"
                android:text="@string/post_heading1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/carrois_gothic"
                android:text="@string/post_village"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/carrois_gothic"
                android:text="@string/post_era"
                android:textColor="@color/primary_green"
                android:textSize="24sp" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/post_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/post_heading_desc"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_text_logo"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/post_name_label"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/username_txt"
            app:endIconMode="clear_text"
            app:endIconTint="@color/primary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/person_icon_selector"
                android:drawablePadding="16dp"
                android:inputType="text|textAutoCorrect|textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/post_phone_label"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/phone_txt"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:endIconTint="@color/primary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/phone_icon_selector"
                android:drawablePadding="16dp"
                android:inputType="phone"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/post_type_label"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:hint="@string/post_txt"
            app:endIconMode="dropdown_menu"
            app:endIconTint="@color/primary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_phone_label">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/post_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/category_icon_selector"
                android:drawablePadding="16dp"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/post_description_label"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/post_description"
            app:endIconMode="clear_text"
            app:endIconTint="@color/primary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_type_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/detail_icon_selector"
                android:drawablePadding="16dp"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_description_label">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/post_cancel_btn"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/cancel_label"
                android:textColor="@color/primary_green"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/post_upload_btn"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/primary_green"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/post_label"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>